fix: Tabs label overflow

--- a/snappymail/v/0.0.0/themes/NextcloudV25+/styles.css
+++ b/snappymail/v/0.0.0/themes/NextcloudV25+/styles.css
@@ -934,6 +934,7 @@ input[type="checkbox"] {
     border-radius: 0;
     border-top-left-radius: var(--nc-border-radius);
     border-top-right-radius: var(--nc-border-radius);
+    overflow-wrap: anywhere;
 }
 
 #rl-app .tabs>label:hover {
